[gd_scene load_steps=17 format=3 uid="uid://l35y1g5j685o"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_ru1o3"]
[ext_resource type="Script" path="res://Game/ParallaxBackground.gd" id="2_nh28l"]
[ext_resource type="Texture2D" uid="uid://dnqn5fwhkb1w8" path="res://Backgrounds/Background_Level_1_Version_1.png" id="2_qwy0g"]
[ext_resource type="Texture2D" uid="uid://wkrgmy5gdtbq" path="res://Backgrounds/Level_1_Background_Second_Layer_Placeholder.png" id="3_vwv2g"]
[ext_resource type="Texture2D" uid="uid://byti4slpwbe51" path="res://Backgrounds/Level_2_Background.png" id="4_mq1pi"]
[ext_resource type="Texture2D" uid="uid://bqio0wupusl6m" path="res://Backgrounds/Level_3_Background.png" id="5_5yhm5"]
[ext_resource type="Texture2D" uid="uid://ctp4ig6sb8vi2" path="res://Backgrounds/Level_2_Parallax_Background.png" id="6_2tvtc"]
[ext_resource type="AudioStream" uid="uid://jwl4vslhva8y" path="res://Music/063 Heartbound OST Ten Below.mp3" id="7_126kc"]
[ext_resource type="Texture2D" uid="uid://bpnq43x72gaa1" path="res://Backgrounds/Level_3_Parallax.png" id="8_ltvmb"]
[ext_resource type="PackedScene" uid="uid://d0gti5ph2m6et" path="res://Menus/ShipBuilder/Ships/player_ship.tscn" id="8_y7o76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51ino"]
bg_color = Color(0.063472, 0.716149, 0.375532, 1)

[sub_resource type="Curve2D" id="Curve2D_wi1ho"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -19, -16, 0, 0, 0, 0, 1759, -16, 0, 0, 0, 0, 1745, 988, 0, 0, 0, 0, -22, 990, 0, 0, 0, 0, -19, -16)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ne8vy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1760, 78, 0, 0, 0, 0, 1757, 841, 0, 0, 0, 0, 1770, 841, 0, 0, 0, 0, 1771, 79, 0, 0, 0, 0, 1760, 78)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1ud6"]
size = Vector2(57.5, 1289)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssbpd"]
size = Vector2(1920.75, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwpcj"]
size = Vector2(1882, 54.5)

[node name="Game" type="Node2D"]
script = ExtResource("1_ru1o3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_nh28l")

[node name="BackgroundLevel1Version1" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(872, 486)
scale = Vector2(1.51302, 1.50154)
texture = ExtResource("2_qwy0g")

[node name="BackgroundLevel2" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(864, 486)
texture = ExtResource("4_mq1pi")

[node name="BackgroundLevel3" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(864, 486)
texture = ExtResource("5_5yhm5")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 2)
motion_offset = Vector2(-40, 0)
motion_mirroring = Vector2(3456, 0)

[node name="Level1BackgroundSecondLayerPlaceholder" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1728, 485)
texture = ExtResource("3_vwv2g")

[node name="Level2BackgroundSecondLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(864, 729)
texture = ExtResource("6_2tvtc")

[node name="Level3BackgroundSecondLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1728, 485)
texture = ExtResource("8_ltvmb")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 628.0
offset_top = 897.0
offset_right = 1044.0
offset_bottom = 924.0
theme_override_styles/fill = SubResource("StyleBoxFlat_51ino")
step = 1.0

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 19.0
offset_top = -30.0
offset_right = 392.0
offset_bottom = -7.0
text = "Resources Collected: Total Storage:  "

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_126kc")
autoplay = true

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_wi1ho")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-19, -16)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="EnemySpawns" type="Path2D" parent="."]
curve = SubResource("Curve2D_ne8vy")

[node name="EnemyPath" type="PathFollow2D" parent="EnemySpawns"]
unique_name_in_owner = true
position = Vector2(1770.97, 102.97)
rotation = -1.56948
progress = 1514.01

[node name="KillBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2(-117, 507.5)
shape = SubResource("RectangleShape2D_a1ud6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillBox"]
position = Vector2(873.375, 1115)
shape = SubResource("RectangleShape2D_ssbpd")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillBox"]
position = Vector2(856, -111)
shape = SubResource("RectangleShape2D_bwpcj")

[node name="PlayerShip" parent="." instance=ExtResource("8_y7o76")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="KillBox" to="." method="_on_kill_box_body_entered"]
